testdata/fixtures/models/positive/bare_o9.py
# "o9" is not a real OpenAI reasoning-model family (only o1/o3/o4 exist) —
# must be flagged even though it's numerically adjacent to known bare
# stems (A9, 03-REVIEW.md)
model_id = "o9-mini"
