testdata/fixtures/models/negative/text_embedding.py
# known OpenAI embedding family — the family list previously had no
# non-chat families at all (A9, 03-REVIEW.md) — must never fire
model = "text-embedding-3-large"
